if BUILDSYSTEM_OPENWRT
SUBDIRS = qcom/mbb/default/ConfigSessionUtils qcom/mbb/default/ConfigSessionAlsaPcm qcom/mbb/default/ConfigSessionAlsaVoice qcom/mbb/default/ConfigSessionAlsaCompress
else
SUBDIRS = qcom/mobile/default/ConfigSessionUtils qcom/mobile/default/ConfigSessionAlsaPcm qcom/mobile/default/ConfigSessionAlsaVoice qcom/mobile/default/ConfigSessionAlsaCompress
endif